--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,3 +38,4 @@ jobs:
         
       # run tests!
       - run: cat /dev/null | sbt test:test
+      - run: cat /dev/null | sbt example/test:test
